// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea Snapshots renders default textarea correctly 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="textarea-container"
  >
    <textarea
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400  "
      data-testid="textarea"
      id="test-id"
      rows="3"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshots renders disabled textarea correctly 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="textarea-container"
  >
    <textarea
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 opacity-50 cursor-not-allowed "
      data-testid="textarea"
      disabled=""
      id="test-id"
      rows="3"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshots renders readonly textarea correctly 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="textarea-container"
  >
    <textarea
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400  "
      data-testid="textarea"
      id="test-id"
      readonly=""
      rows="3"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshots renders required textarea correctly 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="textarea-container"
  >
    <textarea
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400  "
      data-testid="textarea"
      id="test-id"
      required=""
      rows="3"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshots renders textarea with all features enabled correctly 1`] = `
<DocumentFragment>
  <div
    class="w-full"
    data-testid="textarea-container"
  >
    <label
      class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1"
      for="test-id"
    >
      Description
    </label>
    <textarea
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-5 py-3 text-lg border-0 bg-gray-100 dark:bg-gray-800 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400  custom-textarea"
      data-testid="textarea"
      id="test-id"
      maxlength="100"
      placeholder="Enter description here"
      rows="5"
      style="height: 0px;"
    />
    <div
      class="mt-1 flex justify-between text-sm"
    >
      <p
        class="text-gray-500 dark:text-gray-400"
        data-testid="textarea-helper"
      >
        Enter a description
      </p>
      <p
        class="text-gray-500 dark:text-gray-400 "
        data-testid="textarea-counter"
      >
        0/100
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshots renders textarea with autoResize correctly 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="textarea-container"
  >
    <textarea
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400  "
      data-testid="textarea"
      id="test-id"
      rows="3"
      style="height: 0px;"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshots renders textarea with character count correctly 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="textarea-container"
  >
    <textarea
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400  "
      data-testid="textarea"
      id="test-id"
      maxlength="100"
      rows="3"
    />
    <div
      class="mt-1 flex justify-between text-sm"
    >
      <p
        class="text-gray-500 dark:text-gray-400 ml-auto"
        data-testid="textarea-counter"
      >
        0/100
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshots renders textarea with custom className correctly 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="textarea-container"
  >
    <textarea
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400  custom-textarea"
      data-testid="textarea"
      id="test-id"
      rows="3"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshots renders textarea with custom styles correctly 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="textarea-container"
  >
    <textarea
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400  "
      data-testid="textarea"
      id="test-id"
      rows="3"
      style="color: red;"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshots renders textarea with different sizes correctly: TextArea with size lg 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="textarea-container"
  >
    <textarea
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-5 py-3 text-lg border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400  "
      data-testid="textarea"
      id="test-id"
      rows="3"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshots renders textarea with different sizes correctly: TextArea with size md 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="textarea-container"
  >
    <textarea
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400  "
      data-testid="textarea"
      id="test-id"
      rows="3"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshots renders textarea with different sizes correctly: TextArea with size sm 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="textarea-container"
  >
    <textarea
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-3 py-1.5 text-sm border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400  "
      data-testid="textarea"
      id="test-id"
      rows="3"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshots renders textarea with different variants correctly: TextArea with variant filled 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="textarea-container"
  >
    <textarea
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border-0 bg-gray-100 dark:bg-gray-800 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400  "
      data-testid="textarea"
      id="test-id"
      rows="3"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshots renders textarea with different variants correctly: TextArea with variant outline 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="textarea-container"
  >
    <textarea
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400  "
      data-testid="textarea"
      id="test-id"
      rows="3"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshots renders textarea with different variants correctly: TextArea with variant unstyled 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="textarea-container"
  >
    <textarea
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border-0 bg-transparent px-0 py-0 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400  "
      data-testid="textarea"
      id="test-id"
      rows="3"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshots renders textarea with error message correctly 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="textarea-container"
  >
    <textarea
      aria-describedby="test-id-error"
      aria-invalid="true"
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 border-red-500 dark:border-red-400 focus:ring-red-500 focus:border-red-500  "
      data-testid="textarea"
      id="test-id"
      rows="3"
    />
    <div
      class="mt-1 flex justify-between text-sm"
    >
      <p
        class="text-red-600 dark:text-red-400"
        data-testid="textarea-error"
      >
        Description is required
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshots renders textarea with fullWidth correctly 1`] = `
<DocumentFragment>
  <div
    class="w-full"
    data-testid="textarea-container"
  >
    <textarea
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400  "
      data-testid="textarea"
      id="test-id"
      rows="3"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshots renders textarea with helper text correctly 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="textarea-container"
  >
    <textarea
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400  "
      data-testid="textarea"
      id="test-id"
      rows="3"
    />
    <div
      class="mt-1 flex justify-between text-sm"
    >
      <p
        class="text-gray-500 dark:text-gray-400"
        data-testid="textarea-helper"
      >
        Enter a description
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshots renders textarea with label correctly 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="textarea-container"
  >
    <label
      class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1"
      for="test-id"
    >
      Description
    </label>
    <textarea
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400  "
      data-testid="textarea"
      id="test-id"
      rows="3"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshots renders textarea with maxLength correctly 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="textarea-container"
  >
    <textarea
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400  "
      data-testid="textarea"
      id="test-id"
      maxlength="100"
      rows="3"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshots renders textarea with placeholder correctly 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="textarea-container"
  >
    <textarea
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400  "
      data-testid="textarea"
      id="test-id"
      placeholder="Enter description here"
      rows="3"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshots renders textarea with specified number of rows correctly 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="textarea-container"
  >
    <textarea
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400  "
      data-testid="textarea"
      id="test-id"
      rows="5"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea Snapshots renders textarea with value correctly 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="textarea-container"
  >
    <textarea
      class="block rounded-md focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400  "
      data-testid="textarea"
      id="test-id"
      rows="3"
    >
      Sample text
    </textarea>
  </div>
</DocumentFragment>
`;
